@@ -280,24 +280,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|client
-operator|.
-name|solrj
-operator|.
-name|util
-operator|.
-name|ClientUtils
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|common
 operator|.
 name|SolrException
@@ -316,7 +298,7 @@ name|common
 operator|.
 name|params
 operator|.
-name|CommonParams
+name|FacetParams
 import|;
 end_import
 
@@ -332,7 +314,7 @@ name|common
 operator|.
 name|params
 operator|.
-name|FacetParams
+name|ModifiableSolrParams
 import|;
 end_import
 
@@ -2054,11 +2036,7 @@ name|heatmapFacets
 parameter_list|)
 block|{
 comment|// Set the format to PNG because it's compressed and it's the only format we have code to read at the moment.
-comment|//  Changing a param is sadly tricky because field-specific params can show up as local-params (highest precedence)
-comment|//  or as f.key.facet.heatmap.whatever. Ugh. So we re-write the facet.heatmap list with the local-params
-comment|//  moved out to the "f.key." prefix, but we need to keep the key local-param because that's the only way to
-comment|//  set an output key. This approach means we only need to know about the parameter we're changing, not of
-comment|//  all possible heatmap params.
+comment|// We re-write the facet.heatmap list with PNG format in local-params where it has highest precedence.
 comment|//Remove existing heatmap field param vals; we will rewrite
 name|sreq
 operator|.
@@ -2073,106 +2051,23 @@ argument_list|)
 expr_stmt|;
 for|for
 control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
-name|String
-argument_list|,
 name|HeatmapFacet
-argument_list|>
-name|entry
+name|facet
 range|:
 name|heatmapFacets
 operator|.
-name|entrySet
+name|values
 argument_list|()
 control|)
 block|{
-specifier|final
-name|String
-name|key
-init|=
-name|entry
-operator|.
-name|getKey
-argument_list|()
-decl_stmt|;
-specifier|final
-name|HeatmapFacet
-name|facet
-init|=
-name|entry
-operator|.
-name|getValue
-argument_list|()
-decl_stmt|;
 comment|//add heatmap field param
-if|if
-condition|(
-operator|!
-name|key
-operator|.
-name|equals
-argument_list|(
-name|facet
-operator|.
-name|facetOn
-argument_list|)
-condition|)
-block|{
-name|sreq
-operator|.
-name|params
-operator|.
-name|add
-argument_list|(
-name|FacetParams
-operator|.
-name|FACET_HEATMAP
-argument_list|,
-literal|"{!"
-operator|+
-name|CommonParams
-operator|.
-name|OUTPUT_KEY
-operator|+
-literal|"="
-operator|+
-name|ClientUtils
-operator|.
-name|encodeLocalParamVal
-argument_list|(
-name|key
-argument_list|)
-operator|+
-literal|"}"
-operator|+
-name|facet
-operator|.
-name|facetOn
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|sreq
-operator|.
-name|params
-operator|.
-name|add
-argument_list|(
-name|FacetParams
-operator|.
-name|FACET_HEATMAP
-argument_list|,
-name|facet
-operator|.
-name|facetOn
-argument_list|)
-expr_stmt|;
-block|}
-comment|// Turn local-params into top-level f.key.param=value style params
+name|ModifiableSolrParams
+name|newLocalParams
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|facet
@@ -2182,101 +2077,46 @@ operator|!=
 literal|null
 condition|)
 block|{
-specifier|final
-name|Iterator
-argument_list|<
-name|String
-argument_list|>
-name|localNameIter
-init|=
+name|newLocalParams
+operator|.
+name|add
+argument_list|(
 name|facet
 operator|.
 name|localParams
-operator|.
-name|getParameterNamesIterator
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-name|localNameIter
-operator|.
-name|hasNext
-argument_list|()
-condition|)
-block|{
-name|String
-name|pname
-init|=
-name|localNameIter
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|pname
-operator|.
-name|startsWith
-argument_list|(
-name|FacetParams
-operator|.
-name|FACET_HEATMAP
-argument_list|)
-condition|)
-block|{
-continue|continue;
-comment|// could be 'key', or 'v' even
-block|}
-name|String
-name|pval
-init|=
-name|facet
-operator|.
-name|localParams
-operator|.
-name|get
-argument_list|(
-name|pname
-argument_list|)
-decl_stmt|;
-name|sreq
-operator|.
-name|params
-operator|.
-name|set
-argument_list|(
-literal|"f."
-operator|+
-name|key
-operator|+
-literal|"."
-operator|+
-name|pname
-argument_list|,
-name|pval
 argument_list|)
 expr_stmt|;
 block|}
-block|}
 comment|// Set format to PNG; it's the only one we parse
-name|sreq
-operator|.
-name|params
+name|newLocalParams
 operator|.
 name|set
 argument_list|(
-literal|"f."
-operator|+
-name|key
-operator|+
-literal|"."
-operator|+
 name|FacetParams
 operator|.
 name|FACET_HEATMAP_FORMAT
 argument_list|,
 name|FORMAT_PNG
+argument_list|)
+expr_stmt|;
+name|sreq
+operator|.
+name|params
+operator|.
+name|add
+argument_list|(
+name|FacetParams
+operator|.
+name|FACET_HEATMAP
+argument_list|,
+name|newLocalParams
+operator|.
+name|toLocalParamsString
+argument_list|()
+operator|+
+name|facet
+operator|.
+name|facetOn
 argument_list|)
 expr_stmt|;
 block|}
