@@ -924,6 +924,183 @@ argument_list|,
 name|counts
 argument_list|)
 expr_stmt|;
+comment|// now this time we add a filter query and exclude it
+name|QueryResponse
+name|response
+init|=
+name|query
+argument_list|(
+name|params
+argument_list|(
+name|baseParams
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=excludeme}id:0"
+argument_list|,
+comment|// filter to only be id:0
+name|FacetParams
+operator|.
+name|FACET_HEATMAP
+argument_list|,
+literal|"{!ex=excludeme}"
+operator|+
+name|FIELD
+argument_list|,
+comment|// exclude the filter
+name|FacetParams
+operator|.
+name|FACET_HEATMAP_GEOM
+argument_list|,
+literal|"[\"50 20\" TO \"180 90\"]"
+argument_list|,
+name|FacetParams
+operator|.
+name|FACET_HEATMAP_LEVEL
+argument_list|,
+literal|"4"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// because of our 'fq'
+name|hmObj
+operator|=
+name|getHmObj
+argument_list|(
+name|response
+argument_list|)
+expr_stmt|;
+name|counts
+operator|=
+operator|(
+name|List
+argument_list|<
+name|List
+argument_list|<
+name|Integer
+argument_list|>
+argument_list|>
+operator|)
+name|hmObj
+operator|.
+name|get
+argument_list|(
+literal|"counts_ints2D"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+comment|// same counts as before
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|2
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+argument_list|,
+name|counts
+argument_list|)
+expr_stmt|;
 comment|// test using a circle input shape
 name|hmObj
 operator|=
